# data-engineering

./: .env.example  README.md  pyproject.toml
db_python_etl/: DATASET.xlsx  etl.py
db_python_etl/terraform/: main.tf  outputs.tf  provider.tf
db_python_etl/tests/: test_etl.py
ml_api/: app.py
ml_api/docker/: Dockerfile
soft_skills/: soft_skills.md
