[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = ""
authors = ["Sean Daylor <sdaylor@users.noreply.github.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
SQLAlchemy = "^2.0.20"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
pymysql = "^1.1.0"
flask = "^2.3.2"
imageai = "^3.0.3"
torchvision = "^0.15.2"
requests = "^2.31.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
